# Flow88Mastering

./: .gitignore  CMakeLists.txt  LLMS.md  README.md  build.bat  install.bat
.github/workflows/: release.yml  windows-build.yml
Assets/Profiles/Styles/: clean.json  club.json  warm.json
Assets/Profiles/Subgenres/: house.json  melodic.json  progressive.json  techno.json  trance.json
Scripts/: Compare-Flow88BatchEvaluation.ps1  Invoke-Flow88BatchEvaluation.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Tools/: Flow88MasterEval.cpp
Source/flow88/: FlowJuceIncludes.h
Source/flow88/dsp/: FlowMasteringChain.cpp  FlowMasteringChain.h  FlowMeterSource.cpp  FlowMeterSource.h
Source/flow88/eval/: FlowOfflineAnalysis.cpp  FlowOfflineAnalysis.h  FlowPresetEvaluation.cpp  FlowPresetEvaluation.h
Source/flow88/state/: FlowParameterIDs.h  FlowParameterLayout.cpp  FlowParameterLayout.h  FlowProfiles.cpp  FlowProfiles.h  FlowSessionState.cpp  FlowSessionState.h  FlowStateSerializer.cpp  FlowStateSerializer.h
Source/flow88/ui/: FlowLookAndFeel.cpp  FlowLookAndFeel.h  FlowTheme.h  FlowWidgets.cpp  FlowWidgets.h
Tests/: Flow88MasterTests.cpp
docs/: architecture.md
